# prophecies

./: README.md  pyproject.toml  setup.py  todo
prophecies/: __init__.py  cli.py
prophecies.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
prophecies/compiler/: __init__.py  compiler.py  cursor.py  store.py  text_engine.py
prophecies/parser/: __init__.py  grammar.py  tokens.py
tests/: test_pages.py  test_parser.py  test_prophecies.py
tests/_build/: main.py
tests/_build/components/: colored.py
tests/app/: main.tui
tests/app/components/: colored.tui
tests/errors/: list_error.tui  paragraph.tui
tests/pages/: blink.tui  lists.tui  main.tui  paragraph_format.tui  paragraph_forward_next_line.tui  paragraph_long.tui  paragraph_multiline.tui  paragraph_multiline_spaces.tui  paragraph_space.tui  text_formatting.tui
